--- a/src/pages/Company.css
+++ b/src/pages/Company.css
@@ -5,3 +5,15 @@
 .company-name-section {
   @apply text-3xl font-semibold;
 }
+
+.text-about-company {
+  @apply text-lg font-normal;
+}
+
+.cultural-characteristics-container {
+  background-color: rgb(255,255,255, 0.05)
+}
+
+.traditional-characteristics-container {
+  background-color: rgb(255,255,255, 0.05)
+}
