--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,10 @@
+@media (max-width: 639px) { 
+  .subpage-footer-bg {
+    background-color: rgb(255,255,255, 0.05);
+    @apply pb-2 pt-4
+  }
+}
+
 .subpage-bg-header {
   background-color: rgb(255,255,255, 0.05);
 }
@@ -7,7 +14,7 @@
 }
 
 .subpage-header {
-  @apply flex justify-between xl:mx-40 mx-12 py-3;
+  @apply flex justify-between mx-6 xl:mx-40 sm:mx-12 py-3;
 }
 
 .subpage-logo {
@@ -15,33 +22,46 @@
 }
 
 .subpage-rate-search-section {
-  @apply flex gap-4 xl:gap-10;
+  @apply flex lg:ml-0 ml-6 gap-4 xl:gap-10;
 }
 
 .subpage-rate-button {
-  @apply inline-flex justify-self-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+  @apply hidden sm:inline-flex justify-self-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+}
+
+.subpage-rate-button-mobile{
+  @apply sm:hidden justify-self-center mt-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
 
 .subpage-search-select {
-  @apply hidden xl:block h-10 w-full focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-0 bg-gray-100 px-4 py-1 pl-11 text-gray-900 placeholder-gray-500 sm:text-sm;
+  @apply hidden lg:block h-10 w-full focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-0 bg-gray-100 px-4 py-1 pl-11 text-gray-900 placeholder-gray-500 sm:text-sm;
+}
+
+.subpage-navbar-menu {
+  @apply lg:hidden absolute z-40 w-full bg-gray-800 text-white;
+}
+
+.subpage-navbar-menu-content {
+  background-color: rgb(255,255,255, 0.05);
+  @apply pt-2 pb-3 space-y-1;
 }
 
 .subpage-title {
-  @apply flex justify-between mx-20 xl:mx-64 mt-6 xl:mt-14 mb-12 xl:mb-20 text-2xl xl:text-5xl text-neutral-50 font-bold;
+  @apply sm:flex justify-between mx-6 sm:mx-20 xl:mx-64 mt-3 sm:mt-6 xl:mt-14 mb-8 sm:mb-12 xl:mb-20 text-2xl xl:text-5xl text-neutral-50 font-bold;
 }
 
 .subpage-menu-section {
-  @apply max-w-3xl mx-20 xl:mx-auto;
+  @apply hidden sm:block max-w-3xl mx-20 xl:mx-auto;
 }
 
 .subpage-footer {
-  @apply mx-12 xl:mx-40;
+  @apply mx-6 sm:mx-12 xl:mx-40;
 }
 
 .subpage-main {
-  @apply mx-20 xl:max-w-3xl xl:mx-auto mb-14 xl:mb-24 text-neutral-50;
+  @apply mx-6 sm:mx-20 xl:max-w-3xl xl:mx-auto mb-12 sm:mb-14 xl:mb-24 text-neutral-50;
 }
 
 .subpage-search-icon {
-  @apply pointer-events-none xl:absolute xl:top-3.5 mt-1.5 xl:mt-0 xl:left-4 h-6 xl:h-5 w-6 xl:w-5 text-gray-400;
+  @apply pointer-events-none xl:absolute xl:top-3 mt-2 xl:mt-0 xl:left-4 h-6 xl:h-5 w-6 xl:w-5 text-gray-400;
 }
