spacing adjustment in the second page for the mobile

--- a/src/pages/Company.css
+++ b/src/pages/Company.css
@@ -71,5 +71,5 @@
 }
 
 .text-question-section {
-  @apply text-base xl:text-lg font-normal mb-8 max-w-xl;
+  @apply text-base xl:text-lg font-normal mb-7 sm:mb-8 max-w-xl;
 }
