--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -59,7 +59,7 @@
 }
 
 .subpage-main {
-  @apply mx-6 sm:mx-20 xl:max-w-3xl xl:mx-auto mb-12 sm:mb-14 xl:mb-24 text-neutral-50;
+  @apply mx-6 sm:mx-20 xl:max-w-3xl xl:mx-auto mb-14 xl:mb-24 text-neutral-50;
 }
 
 .subpage-search-icon {
