--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -37,6 +37,10 @@
   @apply hidden lg:block h-10 w-full focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-0 bg-gray-100 px-4 py-1 pl-11 text-gray-900 placeholder-gray-500 sm:text-sm;
 }
 
+.subpage-search-select-expanded {
+  @apply  lg:block h-10 w-full focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-0 bg-gray-100 px-4 py-1 pl-11 text-gray-900 placeholder-gray-500 sm:text-sm;
+}
+
 .subpage-navbar-menu {
   @apply lg:hidden absolute z-40 w-full bg-gray-800 text-white;
 }
@@ -63,5 +67,9 @@
 }
 
 .subpage-search-icon {
-  @apply pointer-events-none xl:absolute xl:top-3 mt-2 xl:mt-0 xl:left-4 h-6 xl:h-5 w-6 xl:w-5 text-gray-400;
+  @apply cursor-pointer pointer-events-auto xl:absolute xl:top-3 mt-2 xl:mt-0 xl:left-4 h-6 xl:h-5 w-6 xl:w-5 text-gray-400;
+}
+
+.subpage-search-expanded {
+  @apply absolute z-50 top-3 left-2 w-full pl-3 pr-7;
 }
