--- a/src/pages/Company.css
+++ b/src/pages/Company.css
@@ -21,7 +21,7 @@
 }
 
 .link-about-company {
-  color: #94A3B8;
+  color: #64748B;
   @apply text-xs sm:text-sm lg:text-lg italic font-semibold my-3 xl:my-2.5;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .company-name-section {
-  @apply text-neutral-50 font-semibold text-2xl xl:text-3xl;
+  @apply text-neutral-900 font-semibold text-2xl xl:text-3xl;
 }
 
 .company-rating {
@@ -38,11 +38,11 @@
 }
 
 .company-rating-text {
-  @apply ml-6 xl:ml-1.5 text-neutral-400 text-xs xl:text-sm;
+  @apply ml-6 xl:ml-1.5 text-neutral-600 text-xs xl:text-sm;
 }
 
 .company-review-total {
-  @apply text-neutral-400 text-xs xl:text-sm mt-2 xl:mt-4 mb-6 xl:mb-24;
+  @apply text-neutral-600 text-xs xl:text-sm mt-2 xl:mt-4 mb-6 xl:mb-24;
 }
 
 .rate-this-company-button {
@@ -54,22 +54,27 @@
 }
 
 .cultural-characteristics-container {
-  background-color: rgb(255,255,255, 0.05);
-  @apply rounded-lg py-8 px-3 xl:py-9 xl:px-12;
+  background-color: #FAFAFF;
+  @apply rounded-lg border py-8 px-3 xl:py-9 xl:px-12;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+  border-radius: 16px;
 }
 
 .title-characteristics {
   @apply text-2xl xl:text-3xl font-semibold;
+  color: #4F46E5;
 }
 
 .traditional-characteristics-container {
-  background-color: rgb(255,255,255, 0.05)
+  background-color: #FAFAFF;
+  @apply rounded-lg border py-8 px-3 xl:py-9 xl:px-12;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
 }
 
 .title-question-section {
-  @apply text-base sm:text-xl xl:text-2xl font-semibold mb-8;
+  @apply text-neutral-800 text-base sm:text-xl xl:text-2xl font-semibold mb-8;
 }
 
 .text-question-section {
-  @apply text-base xl:text-lg font-normal mb-7 sm:mb-8 max-w-xl;
+  @apply text-neutral-900 text-base xl:text-lg font-normal mb-7 sm:mb-8 max-w-xl;
 }
