--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -1,5 +1,6 @@
 .footer-content {
   @apply flex justify-between mb-4 sm:mt-14 mt-0 sm:mb-8;
+  
 }
 
 .footer-section {
@@ -7,15 +8,15 @@
 }
 
 .menu-text {
-  color: #94A3B8;
-  @apply py-4 text-sm;
+  color: #475569;
+  @apply py-4 text-sm font-semibold;
 }
 
 .footer-text {
-  color: #FFFFFF;
-  @apply text-sm;
+  color: #334155;
+  @apply text-sm mt-3;
 }
 
 .footer-logo {
-  @apply w-32 xl:w-44;
+  @apply w-32 xl:w-24;
 }
