--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,7 @@
 @media (max-width: 639px) { 
   .subpage-footer-bg {
     background-color: #EEF2FF;
-    @apply pb-2 pt-4
+    @apply pb-2 pt-4;
   }
 }
 
@@ -11,6 +11,10 @@
 
 .subpage-header {
   @apply flex justify-between mx-6 xl:mx-40 sm:mx-12 py-1.5;
+}
+
+.subpage-footer {
+  @apply flex justify-between mx-6 xl:mx-40 sm:mx-12 mt-14 py-1.5;
 }
 
 .subpage-bg-header {
@@ -59,10 +63,7 @@
   @apply hidden sm:block max-w-3xl mx-20 xl:mx-auto;
 }
 
-.subpage-footer {
-  @apply max-w-screen-2xl mx-auto;
-  background: #EEF2FF;
-}
+
 
 .subpage-main {
   @apply mx-6 sm:mx-20 xl:max-w-3xl xl:mx-auto mb-14 xl:mb-24 text-neutral-50;
