--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -38,7 +38,7 @@
 }
 
 .subpage-search-select {
-  @apply hidden lg:block h-11 w-full mt-2 focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-neutral-400 bg-white px-4 py-1 pl-11 text-gray-900 placeholder-gray-500 sm:text-sm;
+  @apply hidden lg:block h-11 w-full mt-2 focus:ring-indigo-500 focus:border-indigo-500 rounded-md border-neutral-400 bg-white px-4 py-1 pl-11 text-gray-900 placeholder-neutral-400 sm:text-sm;
 }
 
 .subpage-search-select-expanded {
@@ -62,8 +62,6 @@
 .subpage-menu-section {
   @apply hidden sm:block max-w-3xl mx-20 xl:mx-auto;
 }
-
-
 
 .subpage-main {
   @apply mx-6 sm:mx-20 xl:max-w-3xl xl:mx-auto mb-14 xl:mb-24 text-neutral-50;
