--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,8 @@
-@media (min-width: 640px) { 
+.hero-bg-header {
+  background: #EEF2FF;
+}
+
+@media (min-width: 1280px) { 
   .hero-section {
     /*background-image: url("../../public/images/hero-bg.svg");
     background-repeat: no-repeat; */
@@ -11,8 +15,17 @@
   }
 }
 
+@media (max-width: 1279px) { 
+  .header-bg {
+    background-image: url("../../public/images/hero-left-blobs-cut.svg"), url("../../public/images/right-top-blobs-cut.svg");
+    background-position: left bottom, right top;
+    background-repeat: no-repeat, no-repeat;
+    background-size: 40% 40%;
+  }
+}
+
 .header-bg {
-  @apply max-w-screen-2xl mx-auto pt-3 sm:pt-6 xl:pt-20 pb-36
+  @apply xl:max-w-screen-2xl mx-auto pt-3 sm:pt-6 xl:pt-20 pb-10 xl:pb-36
 }
 
 @media (max-width: 639px) {
@@ -25,16 +38,12 @@
   }
 }
 
-.hero-bg-header {
-  background: #EEF2FF;
-}
-
 .hero-section {
   @apply max-w-screen-2xl mx-auto;
 }
 
 .hero-logo {
-  @apply w-32 xl:w-24;
+  @apply w-20 xl:w-24;
 }
 
 .navbar-menu {
@@ -47,7 +56,7 @@
 }
 
 .hero-header {
- @apply py-2 mx-6 sm:ml-12 xl:ml-40 flex justify-between;
+ @apply pt-3 pb-1 mx-6 sm:ml-12 xl:ml-40 flex justify-between;
 }
 
 .hero-content {
@@ -56,17 +65,15 @@
 }
 
 .hero-image {
-  @apply hidden sm:block;
+  @apply hidden sm:block xl:w-auto w-64;
 }
 
 .explore-section {
- /* @apply sm:mb-28 mb-14 sm:mt-20 mt-2 xl:mx-96 lg:mx-36 sm:px-20 px-6; */
-
-  
+ /* @apply sm:mb-28 mb-14 sm:mt-20 mt-2 xl:mx-96 lg:mx-36 sm:px-20 px-6; */ 
 }
 
 .hero-title {
-  @apply sm:flex justify-between mx-6 sm:mx-20 xl:mx-64 mb-8 sm:mb-12 xl:mb-6 text-2xl xl:text-5xl font-bold;
+  @apply sm:flex justify-between mx-6 sm:mx-20 xl:mx-64 mb-8 sm:mb-6 xl:mb-6 text-2xl xl:text-5xl font-bold;
   word-spacing: 40px;
   color: #4F46E5;
 }
@@ -78,7 +85,7 @@
 
 .search-label {
   color: #334155;
-  @apply sm:text-2xl text-base font-normal mb-3;
+  @apply text-base xl:text-2xl font-normal mb-3;
 }
 
 .search-item {
@@ -87,7 +94,7 @@
 
 .information-section-item {
   color: #0F172A;
-  @apply text-lg font-normal;
+  @apply text-base xl:text-lg font-normal;
   
 }
 
@@ -97,11 +104,11 @@
 }
 
 .contribute-content {
-  @apply sm:flex grid justify-between sm:gap-x-52 mx-6 sm:mx-20 xl:mx-64;
+  @apply sm:flex grid justify-between gap-x-3 xl:gap-x-52 mx-6 sm:mx-20 xl:mx-64;
 }
 
 .contribute-image {
-  @apply w-40 mr-0 sm:mr-12 xl:mr-0 xl:w-72 justify-self-center;
+  @apply w-48 xl:w-72 mr-0 sm:mr-12 xl:mr-0 justify-self-center;
 }
 
 .rate-section {
