--- a/src/pages/Company.css
+++ b/src/pages/Company.css
@@ -46,7 +46,7 @@
 }
 
 .rate-this-company-button {
-  @apply w-60 xl:mt-2 px-4 py-2 inline-flex justify-self-center border border-transparent shadow-sm rounded-md text-base font-semibold text-neutral-900 bg-indigo-300 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-200;
+  @apply w-60 xl:mt-2 px-4 py-2 inline-flex justify-self-center border border-transparent shadow-sm rounded-md text-base font-semibold text-neutral-900 bg-indigo-300 hover:bg-indigo-400 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-indigo-200;
 }
 
 .icon-button-rate-company {
