--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
 @tailwind utilities;
 
 html, body, #root {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
 }
 
 body {
   background-color: #F7F8FF;
+  display: flex;
 }
